--- a/findly-builder/src/app/components/faqs/add-alternate-question/add-alternate-question.component.scss
+++ b/findly-builder/src/app/components/faqs/add-alternate-question/add-alternate-question.component.scss
@@ -39,7 +39,7 @@
                         }
                         .mat-chip{
                             border-radius: 4px;
-                            background-color: #e5e8ec;
+                            background-color: #EFF0F1;
                             padding: 0px 9px;
                             margin: 3px 0px 3px 3px;
                             min-height: 26px;
@@ -49,9 +49,9 @@
                                 }
                             }
                             .mat-val{
-                                color: #8a959f;
+                                color: #202124;
                                 font-size: 12px;
-                                font-weight: bold;
+                                font-weight: normal;  
                             }
                             .mat-icon{
                                 width: auto;
