--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1178,9 +1178,9 @@ div.divBlockEmptylastChild:first-child {
                                 }
                             }
                             .mat-val{
-                                color: #8a959f;
+                                color: #202124;
                                 font-size: 12px;
-                                font-weight: bold;
+                                font-weight: normal;  
                             }
                             .mat-icon{
                                 width: auto;
