--- a/findly-builder/src/app/components/add-faq/add-faq.component.scss
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.scss
@@ -130,6 +130,42 @@
                 font-weight: normal;
                 font-size: 12px;
             }
+            .condition-view-mode{
+                background: #F8F9FA;
+                border-radius: 10px;
+                padding: 15px 20px;
+                margin-top: 25px;
+                .condition-view-mode-data{
+                    margin-bottom: 6px;
+                    .tag-name{
+                        color: #5F6368;
+                        font-weight: 500;
+                        font-size: 10px;
+                        line-height: 12px;
+                        border: 1px solid #BDC1C6;
+                        box-sizing: border-box;
+                        border-radius: 4px;
+                        padding: 2px 6px;
+                        display: inline-block;
+                        margin-right: 5px;
+                    }
+                    .default-data{
+                        color: #9AA0A6;
+                        font-weight: 500;
+                        font-size: 12px;
+                        line-height: 14px;
+                        display: inline-block;
+                        margin-right: 5px;
+                        &.and-rule{
+                            color: #9AA0A6;
+                            text-transform: uppercase;
+                            font-weight: 500;
+                            font-size: 12px;
+                            line-height: 14px;
+                        }
+                    }
+                }
+            }
             .conditionalBlock{
                 color: #202124;
                 font-size: 14px;   
@@ -689,7 +725,7 @@
                         }
                         .mat-chip{
                             border-radius: 4px;
-                            background-color: #e5e8ec;
+                            background-color: #EFF0F1;
                             padding: 0px 9px;
                             margin: 3px 0px 3px 3px;
                             min-height: 26px;
@@ -699,9 +735,9 @@
                                 }
                             }
                             .mat-val{
-                                color: #8a959f;
+                                color: #202124;
                                 font-size: 12px;
-                                font-weight: bold;                                
+                                font-weight: normal;                                
                             }
                             .mat-icon{
                                 width: auto;
@@ -761,4 +797,150 @@
 }
 .-ml-20{
     margin-left: -20px;
+}
+
+.conditional-sec-new{
+    background: #F8F9FA;
+    border-radius: 10px;
+    padding: 17px 20px;
+    margin-top: 25px;
+    .input-conditions{           
+        padding: 0;
+        .input-bg-sec{
+            width: 100%;
+            background: #F1F1F1;
+            border-radius: 4px;
+            padding: 16px 20px;
+            .search-content-sec{
+                align-items: center;
+                margin-bottom: 16px !important;
+                .title{
+                    color: #9AA0A6;
+                    font-weight: 500;
+                    font-size: 12px;
+                    line-height: 15px;
+                }
+            }
+            .setparameetres-sec{
+                align-items: center;                    
+                .title{
+                    color: #9AA0A6;
+                    font-weight: 500;
+                    font-size: 12px;
+                    line-height: 15px;
+                }                    
+            }
+            .tags{
+                padding-right: 0;
+                .chip-sys-data{
+                    width: 100%;
+                    background: #fff;
+                }
+            }
+            .action-scontent-sec{
+                align-items: center;
+                margin-bottom: 16px !important;
+                .title{
+                    color: #9AA0A6;
+                    font-weight: 500;
+                    font-size: 12px;
+                    line-height: 15px;
+                }
+                .right-side-sec{
+                    app-range-slider{
+                        .custom-created-range-slider{
+                            .single-slider{
+                                width: 100%;
+                                margin: 0;
+                                .slider-track-high{
+                                    background: #E4E5E7;
+                                }        
+                                .slider-selection{
+                                    background: #0D6EFD !important;
+                                }                            
+                                .countThreshold{
+                                    width: 100%;
+                                    display: none;
+                                }                                    
+                                .slider-horizontal{
+                                    width: 100%;
+                                    .tooltip-main{
+                                        display: none;
+                                    }
+                                    .slider-tick, .slider-handle{
+                                        background: #0D6EFD !important;
+                                        box-shadow: 0px 0.25px 1px rgba(7, 55, 127, 0.25), 0px 0.85px 3px rgba(0, 0, 0, 0.19);
+                                    }   
+                                }
+                                .slider-track{
+                                    height: 2px;
+                                    width: 100%;
+                                    margin-top: -3px;
+                                }
+                            }                               
+                        }
+                    }
+                    .result-slider-title{
+                        color: #9AA0A6;
+                        font-weight: 500;
+                        font-size: 12px;
+                        line-height: 15px;
+                        position: relative;
+                        top: -2px;
+                    }
+                    .slider-count{
+                        color: #000000;
+                        font-weight: normal;
+                        font-size: 18px;
+                        line-height: 22px;
+                        padding-left: 5px;
+                    }
+                }
+            }
+            .response-content-sec{
+                align-items: center;
+                margin-bottom: 16px !important;
+                .title{
+                    color: #9AA0A6;
+                    font-weight: 500;
+                    font-size: 12px;
+                    line-height: 15px;
+                }
+            }
+        }
+        .delete-rule{
+            margin-left: 10px;
+            cursor: pointer;
+        }
+    }
+}
+.dropdownDiv{
+    padding: 0 !important;
+    z-index: 999;
+    .kr-sg-dropdowns{
+        .dropdown-open {
+            .dropdown-input{
+                height: 30px;
+                line-height: 28px;
+            }
+        }
+    }
+    &::after{
+        display: none;
+    }
+}
+.mb-13{
+    margin-bottom: 13px;
+}
+.add-condition{
+    color: #0D6EFD;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    padding: 15px 0;
+    cursor: pointer;
+    display: inline-block;
+    img{
+        margin-right: 6px;
+    }
 }
