--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -587,7 +587,7 @@
                         }
                         .mat-chip{
                             border-radius: 4px;
-                            background-color: #e5e8ec;
+                            background-color: #EFF0F1;
                             padding: 0px 9px;
                             margin: 3px 0px 3px 3px;
                             min-height: 30px;
@@ -597,9 +597,9 @@
                                 }
                             }
                             .mat-val{
-                                color: #9B9B9B;
+                                color: #202124;
                                 font-size: 12px;
-                                font-weight: bold;
+                                font-weight: normal;  
                             }
                             .mat-icon{
                                 width: auto;
