--- a/findly-builder/src/app/components/synonyms/synonyms.component.scss
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.scss
@@ -229,7 +229,7 @@
                         }
                         .mat-chip{
                             border-radius: 4px;
-                            background-color: #e5e8ec;
+                            background-color: #EFF0F1;
                             padding: 0px 9px;
                             margin: 3px 0px 3px 3px;
                             min-height: 30px;
